Security feature additions